--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="assets/css/style.css" />
 
-    <title>Portfolio website</title>
+    <title>Portfolio</title>
   </head>
 
   <body>
@@ -602,3 +602,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
