--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="home-img-wrapper">
             <div class="home-img-cover">
               <img
-                src="assets/images/profile.png"
+                src="assets/images/profile1.png"
                 alt="profile picture of the person"
                 class="home-img"
               />
